--- a/src/pages/Sets.module.css
+++ b/src/pages/Sets.module.css
@@ -1,5 +1,5 @@
 .sets {
-  padding: 14px 0 36px;
+  padding: 22px 0 36px;
 }
 
 .header {
